--- a/Changes
+++ b/Changes
@@ -2,3 +2,5 @@
 	- Initial version
 0.2 Mon Dec 29 04:04:30 PM CET 2025
 	- Fixing multiple typos in docs.
+0.3 Mon Dec 29 06:08:52 PM CET 2025
+	- Fixing extra typo in the docs
