--- a/Changes
+++ b/Changes
@@ -4,3 +4,5 @@
 	- Fixing multiple typos in docs.
 0.3 Mon Dec 29 06:08:52 PM CET 2025
 	- Fixing extra typo in the docs
+0.4 Mon Dec 29 06:53:18 PM CET 2025
+	- Adding an example project using this code.
